--- a/produtos.html
+++ b/produtos.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="produtos.css" href="produtos.css">
+    <link rel="stylesheet" href="produtos.css">
     <title>Produtos - Alura Barbearia</title>
 </head>
 <body>
     <header>
         <h1><img src="logo.png"></h1>
-        <ul>
-            <li>Home</li>
-            <li>Produtos</li>
-            <li>Contato</li>
-        </ul>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="produtos.html">Produtos</a></li>
+                <li><a href="contato.html">Contato</a></li>
+            </ul>
+        </nav>
     </header>
 </body>
 </html>
