--- a/produtos.html
+++ b/produtos.html
@@ -22,6 +22,7 @@
             </nav>
         </div>
     </header>
+
     <main>
         <ul class="produtos">
             <li>
@@ -44,5 +45,11 @@
             </li>
         </ul>
     </main>
+
+    <footer>
+        <img src="logo-branco.png">
+        <p class="copyright">&copy; Barbearia Alura - 2022</p>
+    </footer>
+
 </body>
 </html>
