--- a/exercicio/index.html
+++ b/exercicio/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
-    <title>Produtos - Alura Barbearia</title>
+    <title>Exercicio - Curso 02 Html - css</title>
 </head>
 <body>
     <header>
@@ -14,31 +14,33 @@
 
             <nav>
                 <ul>
-                    <li><a href="Produtos.html">Produtos</a></li>
-                    <li><a href="Atendimento.html">Atendimento</a></li>
-                    <li><a href="Sobre.html">Sobre</a></li>
+                    <li><a href="">Produtos</a></li>
+                    <li><a href="">Atendimento</a></li>
+                    <li><a href="">Sobre</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     <main>
+        <a href="index.html"><img class="imagem-principal" src="palprincipal.png"></a>
+
         <ul class="produtos">
             <li>
-                <img src="camisa01.png">
+                <a href=""><img src="camisa01.png"></a>
                 <h2>Camisa Palmeiras HOME</h2>
                 <p>2022 Masculina</p>
                 <p class="preco"><strong>R$ 299,90</strong></p>
             </li>
 
             <li>
-                <img src="camisa02.png">
+                <a href=""><img src="camisa02.png"></a>
                 <h2>Camisa Palmeiras AWAY</h2>
                 <p>2022 Masculina</p>
-                <p class="preco"><strong>R$ 299,90</strong></p>
+                <p class="preco"><b>R$ 299,90</b></p>
             </li>
 
             <li>
-                <img src="camisa03.png">
+                <a href=""><img src="camisa03.png"></a>
                 <h2>Camisa Palmerias THIRD</h2>
                 <p>2022 Jogador</p>
                 <p class="preco"><strong>R$ 399,90</strong></p>
@@ -46,8 +48,7 @@
         </ul>
     </main>
     <footer>
-        
+        ...
     </footer>
-
 </body>
 </html>
